fixed spacing on footer

--- a/public/themes/default/css/main.css
+++ b/public/themes/default/css/main.css
@@ -67,6 +67,7 @@ body {
 
 #footer {
     clear: both;
+    margin-top: .5em;
 }
 
 #copyright {
